# kokkos_dev_container

./: .gitignore  README.md
devc_hellow/: CMakeLists.txt
devc_hellow/.devcontainer/: Dockerfile  devcontainer.json
devc_hellow/src/: toy_kokkos.cpp
